# Tern

./: .gitignore  Taskfile.yml  pyproject.toml
scripts/: basic_connect.py  db_management.py
src/tern/: __init__.py  db_uitls.py  typed_query.py  utils.py
tests/: test_environment.py
tests/integration/: conftest.py  test_db_setup.py
tests/unit/: test_utils.py
